tests/urmoac/errors/testsuite.urmoac
# missing parameter for net
net_missing parameter

# string for a double option (max-tt)
maxtt_string_parameter


